TODO: set up output writing and data input for spark submit once logged in