@@ -4,24 +4,11 @@ apply plugin: 'maven-publish'
 group = 'com.github.olingejj'
 version = '2.0'
 
-sourceCompatibility = 20 // java 20
-targetCompatibility = 20
+sourceCompatibility = 8 // java 8
+targetCompatibility = 8
 
 repositories {
   mavenCentral()
-}
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-// JavaExec tasks need to have the JVM argument --enable-preview.
-tasks.withType(JavaExec) {
-    jvmArgs.add('--enable-preview')
-}
-apply plugin: 'java'
-jar {
-    manifest {
-        attributes 'Main': 'Main'
-    }
 }
 dependencies {
   implementation 'com.google.guava:guava:29.0-jre'
